# kccs461

./: .gitignore  README.md
hw01/: .bazelrc  AbileneToZendaFindFirst.json  BUILD  Flexi.md  MODULE.bazel  README.md  firstfound.json  out.txt  process.txt  random1.json  test1.json  testout1.json
hw01/data/: connections.txt
hw01/src/edu/umkc/cs461/hw1/algorithms/: AStar.java  DepthFirst.java
hw01/src/edu/umkc/cs461/hw1/data/: BiDirectGraph.java
hw01/src/main/edu/umkc/cs461/hw1/: Main.java
hw01/src/main/edu/umkc/cs461/hw1/algorithms/: BestFirst.java  IDDFS.java
hw01/src/main/edu/umkc/cs461/hw1/data/: NodePair.java
hw01/src/main/java/edu/umkc/cs461/hw1/: Main.java
hw01/src/main/java/edu/umkc/cs461/hw1/algorithms/: AStar.java  AStarFrontier.java  BeamFrontier.java  BestFirst.java  BestFirstFrontier.java  BreadthFirst.java  DepthFirst.java  FlexiSearch.java  Frontier.java  IDDFS.java  IDDFSFrontier.java  QueueFrontier.java  RandomFrontier.java  SearchState.java  StackFrontier.java
hw01/src/main/java/edu/umkc/cs461/hw1/data/: BiDirectGraph.java  City.java  Measureable.java  NodePair.java
hw02/: BUILD  MODULE.bazel  README.md  run_01.txt  run_02.txt  run_03.txt  run_04.txt  run_05.txt  run_06.txt
hw02/data/: data.json
hw02/src/main/java/edu/umkc/cs461/hw2/: Main.java
hw02/src/main/java/edu/umkc/cs461/hw2/algorithm/: PopulationCrossover.java  PopulationCuller.java  PopulationGenerator.java  PopulationMutator.java  PopulationScorer.java
hw02/src/main/java/edu/umkc/cs461/hw2/model/: Activity.java  Assignment.java  Model.java  ModelLoader.java  Room.java  (+2 more)
(+4 files in other folders)
